@@ -23,6 +23,7 @@
 package com.microsoft.identity.common.adal.internal;
 
 import java.nio.charset.Charset;
+import java.util.concurrent.atomic.AtomicInteger;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -828,6 +829,11 @@ public final class AuthenticationConstants {
         /**
          * String of key for account name.
          */
+        public static final String FLIGHT_INFO = "com.microsoft.identity.broker.flights";
+
+        /**
+         * String of key for account name.
+         */
         public static final String ACCOUNT_NAME = "account.name";
 
         /**
@@ -1258,6 +1264,16 @@ public final class AuthenticationConstants {
         public static final String UPDATE_BROKER_RT_SUCCEEDED = "update_broker_rt_succeeded";
 
         /**
+         * Boolean to return when a Broker RT is successfully updated.
+         */
+        public static final String SET_FLIGHTS_SUCCEEDED = "set_flights_succeeded";
+
+        /**
+         * Boolean to return when a Broker RT is successfully updated.
+         */
+        public static final String GET_FLIGHTS_RESULT = "active_flights";
+
+        /**
          * Time out for the AccountManager's remove account operation in broker.
          */
         public static final int ACCOUNT_MANAGER_REMOVE_ACCOUNT_TIMEOUT_IN_MILLISECONDS = 5000;
@@ -1374,6 +1390,46 @@ public final class AuthenticationConstants {
         public static final String AUTHORITY = "microsoft.identity.broker";
 
         /**
+         * Tie the API paths and codes into a single object structure to stop us from having to keep
+         * them in sync.
+         */
+        public enum API {
+            MSAL_HELLO(MSAL_HELLO_PATH, MSAL_HELLO_URI_CODE),
+            ACQUIRE_TOKEN_INTERACTIVE(MSAL_ACQUIRE_TOKEN_INTERACTIVE_PATH, MSAL_ACQUIRE_TOKEN_INTERACTIVE_CODE),
+            ACQUIRE_TOKEN_SILENT(MSAL_ACQUIRE_TOKEN_SILENT_PATH, MSAL_ACQUIRE_TOKEN_SILENT_CODE),
+            GET_ACCOUNTS(MSAL_GET_ACCOUNTS_PATH, MSAL_GET_ACCOUNTS_CODE),
+            REMOVE_ACCOUNTS(MSAL_REMOVE_ACCOUNTS_PATH, MSAL_REMOVE_ACCOUNTS_CODE),
+            GET_CURRENT_ACCOUNT_SHARED_DEVICE(MSAL_GET_CURRENT_ACCOUNT_SHARED_DEVICE_PATH, MSAL_GET_CURRENT_ACCOUNT_SHARED_DEVICE_CODE),
+            GET_DEVICE_MODE(MSAL_GET_DEVICE_MODE_PATH, MSAL_GET_DEVICE_MODE_CODE),
+            SIGN_OUT_FROM_SHARED_DEVICE(MSAL_SIGN_OUT_FROM_SHARED_DEVICE_PATH, MSAL_SIGN_OUT_FROM_SHARED_DEVICE_CODE),
+            GENERATE_SHR(GENERATE_SHR_PATH, MSAL_GENERATE_SHR_CODE),
+            BROKER_HELLO(BROKER_API_HELLO_PATH, BROKER_API_HELLO_URI_CODE),
+            BROKER_GET_ACCOUNTS(BROKER_API_GET_BROKER_ACCOUNTS_PATH, BROKER_API_GET_BROKER_ACCOUNTS_CODE),
+            BROKER_REMOVE_ACCOUNT(BROKER_API_REMOVE_BROKER_ACCOUNT_PATH, BROKER_API_REMOVE_BROKER_ACCOUNT_CODE),
+            BROKER_UPDATE_BRT(BROKER_API_UPDATE_BRT_PATH, BROKER_API_UPDATE_BRT_CODE),
+            BROKER_ADD_FLIGHTS(BROKER_API_ADD_FLIGHTS_PATH),
+            BROKER_SET_FLIGHTS(BROKER_API_SET_FLIGHTS_PATH),
+            BROKER_GET_FLIGHTS(BROKER_API_GET_FLIGHTS_PATH),
+            GET_SSO_TOKEN(GET_SSO_TOKEN_PATH)
+                ;
+            private String mPath;
+            private Integer mCode;
+            API(String path, int code) {
+                this.mPath = path;
+                this.mCode = code;
+            }
+            API(String path) {
+                this.mPath = path;
+                this.mCode = null;
+            }
+            public String path() {
+                return mPath;
+            }
+            public int code() {
+                return mCode == null ? ordinal() + 1: mCode;
+            }
+        }
+        /**
          * URI Path constant for MSAL-to-Broker hello request using ContentProvider.
          */
         public static final String MSAL_HELLO_PATH = "/hello";
@@ -1439,6 +1495,26 @@ public final class AuthenticationConstants {
         public static final String BROKER_API_UPDATE_BRT_PATH = "/brokerApi/updateBrt";
 
         /**
+         * Broker api path constant for adding flight information.
+         */
+        public static final String BROKER_API_ADD_FLIGHTS_PATH = "/brokerApi/addFlights";
+
+        /**
+         * Broker api path constant for adding flight information.
+         */
+        public static final String BROKER_API_GET_FLIGHTS_PATH = "/brokerApi/getFlights";
+
+        /**
+         * Broker api path constant for adding flight information.
+         */
+        public static final String BROKER_API_SET_FLIGHTS_PATH = "/brokerApi/setFlights";
+
+        /**
+         * Broker api path constant for adding flight information.
+         */
+        public static final String GET_SSO_TOKEN_PATH = "/ssoToken";
+
+        /**
          * BrokerContentProvider URI code constant for MSAL-to-Broker hello request.
          */
         public static final int MSAL_HELLO_URI_CODE = 1;
@@ -1502,6 +1578,7 @@ public final class AuthenticationConstants {
          * BrokerContentProvider URI code constant for MSAL-to-Broker generateSHR request.
          */
         public static final int MSAL_GENERATE_SHR_CODE = 13;
+
     }
 
     public static final class AuthorizationIntentKey {
