@@ -3,6 +3,7 @@ V.Next
 - [MINOR] Hide Switch Account in Broker interactive flows (#1284)
 - [MINOR] Enables removeAccount api to remove account records from all environments (#1248)
 - [MINOR] Adds the ability for KeyAccessors to expose their manager (#1285)
+- [MINOR] Adds new API support for the broker - SSO token and flight support (#1290)
 
 Version 3.2.0
 ----------
